Name:               curves
Version:            1.0.0
Description:        Library for drawing curve based images.
Category:           Graphics
License:            MIT
License-file:       LICENSE
Author:             Ulf Norell
Maintainer:         ulf.norell@gmail.com
Build-Type:         Simple
Cabal-Version:      >=1.2

Data-Files:         fonts/LiberationMono-Bold.svg
                    fonts/LiberationMono-BoldItalic.svg
                    fonts/LiberationMono-Italic.svg
                    fonts/LiberationMono-Regular.svg
                    fonts/LiberationSans-Bold.svg
                    fonts/LiberationSans-BoldItalic.svg
                    fonts/LiberationSans-Italic.svg
                    fonts/LiberationSans-Regular.svg
                    fonts/LiberationSerif-Bold.svg
                    fonts/LiberationSerif-BoldItalic.svg
                    fonts/LiberationSerif-Italic.svg
                    fonts/LiberationSerif-Regular.svg

Library
  Build-Depends:    base >= 3.0,
                    bytestring >= 0.10,
                    QuickCheck >= 2.5,
                    HaXml >= 1.23,
                    containers >= 0.4,
                    filepath >= 1.3,
                    JuicyPixels >= 2.0
  Exposed-Modules:  
                    Graphics.Curves
                    Graphics.Curves.Attribute
                    Graphics.Curves.Colour
                    Graphics.Curves.Geometry
                    Graphics.Curves.Graph
                    Graphics.Curves.Math
                    Graphics.Curves.Style
                    Graphics.Curves.SVG.Font
                    Graphics.Curves.SVG.Path
                    Graphics.Curves.Text
                    Graphics.Curves.Text.Fonts.Liberation
  Other-Modules:    
                    Graphics.Curves.BoundingBox
                    Graphics.Curves.Compile
                    Graphics.Curves.Curve
                    Graphics.Curves.Image
                    Graphics.Curves.Render
                    Graphics.Curves.Tests
                    Graphics.Curves.Trie
                    Paths_curves
  GHC-Options:      -O2 -funbox-strict-fields

