Name:               easy-image
Version:            1.0
Description:        Library for drawing simple pictures
License:            PublicDomain
Author:             Ulf Norell
Maintainer:         ulf.norell@gmail.com
Build-Type:         Simple
Cabal-Version:      >=1.2

Library
  Build-Depends:    base >= 3.0,
                    bytestring >= 0.10,
                    QuickCheck >= 2.5,
                    JuicyPixels >= 2.0
  Exposed-Modules:  
                    Graphics.EasyImage
                    Graphics.EasyImage.Attribute
                    Graphics.EasyImage.Chart
                    Graphics.EasyImage.Colour
                    Graphics.EasyImage.Geometry
                    Graphics.EasyImage.Math
                    Graphics.EasyImage.Style
                    Graphics.EasyImage.Text
  Other-Modules:    
                    Graphics.EasyImage.BoundingBox
                    Graphics.EasyImage.Compile
                    Graphics.EasyImage.Curve
                    Graphics.EasyImage.Image
                    Graphics.EasyImage.Render
                    Graphics.EasyImage.Tests
  GHC-Options:      -O2 -funbox-strict-fields


