Name:               easy-image
Version:            1.0
Description:        Library for drawing simple pictures
License:            MIT
License-file:       LICENSE
Author:             Ulf Norell
Maintainer:         ulf.norell@gmail.com
Build-Type:         Simple
Cabal-Version:      >=1.2

Data-Files:         fonts/LiberationMono-Bold.svg
                    fonts/LiberationMono-BoldItalic.svg
                    fonts/LiberationMono-Italic.svg
                    fonts/LiberationMono-Regular.svg
                    fonts/LiberationSans-Bold.svg
                    fonts/LiberationSans-BoldItalic.svg
                    fonts/LiberationSans-Italic.svg
                    fonts/LiberationSans-Regular.svg
                    fonts/LiberationSerif-Bold.svg
                    fonts/LiberationSerif-BoldItalic.svg
                    fonts/LiberationSerif-Italic.svg
                    fonts/LiberationSerif-Regular.svg

Library
  Build-Depends:    base >= 3.0,
                    bytestring >= 0.10,
                    QuickCheck >= 2.5,
                    HaXml >= 1.23,
                    containers >= 0.4,
                    filepath >= 1.3,
                    JuicyPixels >= 2.0
  Exposed-Modules:  
                    Graphics.EasyImage
                    Graphics.EasyImage.Attribute
                    Graphics.EasyImage.Chart
                    Graphics.EasyImage.Colour
                    Graphics.EasyImage.Geometry
                    Graphics.EasyImage.Graph
                    Graphics.EasyImage.Math
                    Graphics.EasyImage.Style
                    Graphics.EasyImage.SVG.Font
                    Graphics.EasyImage.SVG.Path
                    Graphics.EasyImage.Text
                    Graphics.EasyImage.Text.Fonts.Liberation
  Other-Modules:    
                    Graphics.EasyImage.BoundingBox
                    Graphics.EasyImage.Compile
                    Graphics.EasyImage.Curve
                    Graphics.EasyImage.Image
                    Graphics.EasyImage.Render
                    Graphics.EasyImage.Tests
                    Graphics.EasyImage.Trie
                    Paths_easy_image
  GHC-Options:      -O2 -funbox-strict-fields

